tests/ui/compile-flags/invalid/pgo-sample-use-and-generate-conflicting-flags.rs
//@ compile-flags: -C profile-sample-use=path -C profile-generate
//~? ERROR option `-C profile-sample-use` cannot be used with `-C profile-generate` or `-C profile-use`
